Updated some of the site's visuals

--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -6,6 +6,7 @@ $font-normal: "Titillium Web", sans-serif;
 
 $c-on-dark-text: white;
 $c-on-dark-background: rgb(31, 24, 31);
+$c-on-dark-background-light: rgb(38, 34, 42);
 $c-transparent: rgba(0, 0, 0, 0);
 $c-accent: rgb(255, 0, 81);
 $c-accent-hover: rgb(255, 0, 179);
