Added 'closeRoom' socket event & instructions

--- a/client/src/sass/sections.scss
+++ b/client/src/sass/sections.scss
@@ -1,4 +1,8 @@
-@import "variables";
+@import 'variables';
+
+.section-divider div {
+  background-color: $c-accent;
+}
 
 .section-divider {
   font-size: 4em;
@@ -12,6 +16,10 @@
   background-color: $c-on-dark-background-light;
 
   font-size: 1.1em;
+}
+#nav-title {
+  color: $c-accent;
+  text-shadow: 0px 0px 12px black;
 }
 #nav-button {
   background-color: $c-on-dark-background;
