--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 
 @tailwind base;
 @tailwind components;
@@ -34,7 +34,7 @@ body {
   color: $c-on-dark-text;
   background-size: cover;
   background-color: $c-on-dark-background;
-  background-image: url("./content/backgrounds/bg-dark-1.svg");
+  background-image: url('./content/backgrounds/bg-dark-1.svg');
 
   overflow-x: hidden;
 }
@@ -67,6 +67,7 @@ h6 {
 }
 
 a {
+  font-weight: bold;
   opacity: 0.8;
   color: $c-accent;
   border-bottom: solid 1px $c-transparent;
