--- a/client/src/sass/sections.scss
+++ b/client/src/sass/sections.scss
@@ -18,7 +18,7 @@
   font-size: 1.1em;
 }
 #nav-title {
-  color: $c-accent;
+  color: $c-on-dark-text;
   text-shadow: 0px 0px 12px black;
 }
 #nav-button {
