--- a/client/src/sass/sections.scss
+++ b/client/src/sass/sections.scss
@@ -32,14 +32,24 @@
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
 }
 
+#loading-message-container,
 #footer-container {
   background-color: $c-on-dark-background-light;
 }
 
-#home {
+#loading-message-container {
+  padding: 2em;
+}
+#loading-page {
   background-color: $c-on-dark-background;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
+#home,
 #page {
   background-color: $c-on-dark-background;
 }
