--- a/client/src/sass/_animations.scss
+++ b/client/src/sass/_animations.scss
@@ -25,3 +25,22 @@
     transform: translateY(20px);
   }
 }
+
+@keyframes anim-notify {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  5% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  95% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0);
+  }
+}
