Added layout design for hosting/joining a room

--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -148,6 +148,7 @@ button:disabled {
   animation: anim-notify 2s ease forwards;
 }
 
-// .divider {
-//   scale: 25%;
-// }
+#animated-hourglass {
+  animation: anim-rotate-overshoot 2s infinite;
+  animation-timing-function: ease;
+}
