--- a/client/src/sass/_animations.scss
+++ b/client/src/sass/_animations.scss
@@ -3,12 +3,7 @@
     background-color: rgba(255, 0, 85, 0.5);
   }
   50% {
-    background-color: rgba(
-      255,
-      255,
-      255,
-      0
-    ); /* Change this to the original background color of your card */
+    background-color: rgba(255, 255, 255, 0);
   }
   100% {
     background-color: rgba(255, 0, 85, 0.5);
@@ -42,5 +37,32 @@
   100% {
     opacity: 0;
     transform: scale(0);
+  }
+}
+
+@keyframes anim-rotate-overshoot {
+  0% {
+    transform: rotate(0deg);
+  }
+  35% {
+    transform: rotate(200deg);
+  }
+  40% {
+    transform: rotate(180deg);
+  }
+  50% {
+    transform: rotate(175deg);
+  }
+  85% {
+    transform: rotate(380deg);
+  }
+  90% {
+    transform: rotate(360deg);
+  }
+  95% {
+    transform: rotate(355deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
